--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ datetime
 pyarrow>=10.0.0
 numpy>=1.21.0
 openpyxl>=3.0.0
-numpy>=1.21.0
 scikit-learn>=1.0.0
 matplotlib>=3.5.0
 seaborn>=0.11.0
+psutil>=5.8.0
+concurrent-futures>=3.1.1
